[package]
name = "reference"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12"
rustc-hash = "1.1"

[dev-dependencies]
bencher = "0.1"
lockfree = "0.5"
nohash-hasher = "0.2"
rand = "0.8"
vector = { git = "https://github.com/feymartynov/vector-rs" }

[[bench]]
name = "entry"
harness = false

[[bench]]
name = "id_index"
harness = false

[[bench]]
name = "reference"
harness = false
